# obs-studio

./: CMakeLists.txt  README.rst
CI/: before-deploy-osx.sh  before-script-osx.sh
UI/: window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp
UI/data/locale/: en-US.ini
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui
libobs/: obs-encoder.c  obs-encoder.h  obs-output.h  obs.h
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: jim-nvenc.c
plugins/obs-x264/: obs-x264.c
plugins/rtmp-services/: rtmp-common.c  rtmp-custom.c
plugins/zixi-output/: CMakeLists.txt  zixi-constants.h  zixi-dynload.h  zixi-output-main.c  zixi-output.c  zixi-service.c
plugins/zixi-output/include/: zixi_feeder_interface.h
